<resources>
    <string name="app_name">Bullseye</string>
    <string name="instruction_text">PUT THE BULLSEYE AS CLOSE AS YOU CAN TO</string>
    <string name="target_value_text">0</string>
    <string name="min_value_text">1</string>
    <string name="max_value_text">100</string>
    <string name="hit_me_button_text">Hit me!</string>
    <string name="result_dialog_title0">Neat</string>
    <string name="result_dialog_title1">What follows a critical hit!</string>
    <string name="result_dialog_title2">Critical!</string>
    <string name="result_dialog_title3">Good!</string>
    <string name="result_dialog_title4">OK!</string>
    <string name="result_dialog_title5">Mm-hmm</string>
    <string name="result_dialog_title6">Are you even trying?</string>
    <string name="result_dialog_title7">What\'s worst than 2? 1</string>
    <string name="result_dialog_title8">Ouch!</string>
    <string name="result_dialog_title9">Get Over Here!</string>
    <string name="result_dialog_title10">Come Here!</string>
    <string name="result_dialog_title11">Wasted!</string>
    <string name="result_dialog_title12">Owned</string>
    <string name="result_dialog_message">The target value was %1$d!\nYou\'ve hit %2$d!\nYou\'ve got %3$d points!\nTotal Score: %4$d points.</string>
    <string name="result_dialog_button">Awesome!</string>
    <string name="score_value">%d</string>
    <string name="round_value">%d</string>
    <string name="options_title_text">Settings</string>
    <string name="restart_game_text_description">Restart game</string>
    <string name="close_menu_window_text_description">Close Menu window</string>
    <string name="continue_playing_text_description">Continue playing</string>
    <string name="exit_game_text_description">Exit game</string>
    <string name="menu_main_text">Menu</string>
    <string name="start_over_text">Start Over</string>
    <string name="options_text">Options</string>
    <string name="round_plain_text">Round</string>
    <string name="round_plain_value">%d</string>
    <string name="score_plain_text">Score</string>
    <string name="score_plain_value">%d</string>
    <string name="score_round_position_plain_text">Score and round position:</string>
    <string name="target_like_background">Target-like background</string>
</resources>