<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.20" />

    <TextView
            android:id="@+id/target_text_view"
            android:text="@string/target_value_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar" />

    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/max_value_slicer"
            app:layout_constraintStart_toEndOf="@+id/min_value_slicer" />

    <TextView
            android:id="@+id/min_value_slicer"
            android:text="@string/min_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/seekBar"
            />

    <TextView
            android:id="@+id/max_value_slicer"
            android:text="@string/max_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/seekBar"
            />

    <Button
            android:text="@string/hit_me_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/hitMeButton"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
            android:id="@+id/score"
            android:text="@string/score_value"
            tools:text="0"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView" />

    <TextView
            android:id="@+id/current_round_textView"
            android:text="@string/round_value"
            tools:text="0"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>