<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_gravity="center">

    <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_replay_24"
            android:id="@+id/restart_game_button"
            android:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintStart_toEndOf="@+id/continue_game_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/exit_game_button"
            app:layout_constraintTop_toTopOf="@+id/continue_game_button"
            app:layout_constraintBottom_toBottomOf="@+id/continue_game_button"
            android:contentDescription="@string/restart_game_text_description"
            android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/continue_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24"
            android:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/restart_game_button"
            android:contentDescription="@string/continue_playing_text_description"
            app:layout_constraintTop_toBottomOf="@id/positionGroup"
            app:layout_constraintBottom_toBottomOf="parent"
            android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/exit_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
            android:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintStart_toEndOf="@+id/restart_game_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restart_game_button"
            app:layout_constraintBottom_toBottomOf="@+id/restart_game_button"
            android:contentDescription="@string/exit_game_text_description"
            android:minHeight="48dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/positionGroup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/continue_game_button"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
                android:id="@+id/score_round_position_textview"
                android:text="@string/score_round_position_plain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="0"
                android:lines="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/round_score_position_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/cardview_dark_background"
                android:shadowRadius="15"
                android:shadowDx="5"
                android:shadowDy="5"
                android:elevation="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_dark_background"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>